--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
       <img srcset="images/dark2_p.jpg 400w ,
          images/dark2_t.jpg 960w ,
-         images/dark2.jpg 1350w"
- src="images/highway.jpg">
+         images/dark2.jpg 1980w"
+ src="images/dark2.jpg">
         <!--  <img src="images/dark2.jpg" alt="">-->
             <h1>My name is Matteo Lista</h1>
             <p>I'm a web developer</p>
@@ -54,7 +54,7 @@ Since I was little I was interested in informatics and this led me to a science-
     </br>
       <div class="w3-container">
       <div>
-        <p>HTML</p>
+        <p class="linguaggio">HTML</p>
       <div class="w3-light-grey w3-round-xlarge">
         <div class="w3-container w3-blue w3-round-xlarge" style="width:70%">70%</div>
       </div>
@@ -62,7 +62,7 @@ Since I was little I was interested in informatics and this led me to a science-
   </br>
 
       <div>
-        <p>CSS</p>
+        <p class="linguaggio">CSS</p>
       <div class="w3-light-grey w3-round-xlarge">
         <div class="w3-container w3-purple w3-round-xlarge" style="width:60%">60%</div>
       </div>
@@ -70,7 +70,7 @@ Since I was little I was interested in informatics and this led me to a science-
     </br>
 
       <div>
-        <p>JAVA</p>
+        <p class="linguaggio">JAVA</p>
       <div class="w3-light-grey w3-round-xlarge">
         <div class="w3-container w3-red w3-round-xlarge" style="width:70%">70%</div>
       </div>
@@ -78,7 +78,7 @@ Since I was little I was interested in informatics and this led me to a science-
   </br>
 
       <div>
-        <p>C++</p>
+        <p class="linguaggio">C++</p>
       <div class="w3-light-grey w3-round-xlarge">
         <div class="w3-container w3-yellow w3-round-xlarge" style="width:50%">50%</div>
       </div>
@@ -97,7 +97,7 @@ Since I was little I was interested in informatics and this led me to a science-
            images/highway.jpg 2500w" style="float:right;margin: 10px 20px 20px 30px;"
    src="images/highway.jpg">
     <!--<img src="images/highway.jpg" style="float:right;margin: 20px">-->
-    <p>The digital world is constantly evolving. What represents progress today may be obsolete tomorrow. </br>
+    <p class="futuro">The digital world is constantly evolving. What represents progress today may be obsolete tomorrow. </br>
        We need to update our knowledge as often as possible to avoid staying behind and, most importantly,
         keep an open mind in order to not be trapped in old paradigms and reject the positivity of technological advancement. </br>
        This is why I don't want to limit myself and keep working,
