--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Since I was little I was interested in informatics and this led me to a science-
 
     <article id="future">
       <h2>FUTURE</h2>
-      <div  style="border: 1px solid #000">
+      <div class="contenitore"  style="border: 1px solid #000">
 
         <img srcset="images/highway_s.jpg 400w ,
            images/highway.jpg 2500w" style="float:right;margin: 10px 20px 20px 30px;"
